--- a/frontend/src/Signup.css
+++ b/frontend/src/Signup.css
@@ -21,6 +21,7 @@ html {
   overflow: hidden;
   max-width: 1920px;
   margin: 0 auto;
+  padding-top: 50px;
 }
 
 .signup-form-container {
